<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_walk"
        android:icon="@drawable/baseline_directions_walk_black_24dp"
        android:title="@string/nav_walk" />
    <item
        android:id="@+id/nav_drive"
        android:icon="@drawable/baseline_directions_car_black_24dp"
        android:title="@string/nav_drive" />
    <item
        android:id="@+id/nav_bus"
        android:icon="@drawable/baseline_directions_bus_black_24dp"
        android:title="@string/nav_bus" />
    <item
        android:id="@+id/nav_carpool"
        android:icon="@drawable/baseline_people_black_24dp"
        android:title="@string/nav_carpool" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/baseline_person_black_24dp"
        android:title="@string/nav_account" />
</menu>